{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1731,
  "lineage": "84723454-e89e-01a7-a22b-53a32c22dad6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07972dac7471a4627",
            "arn": "arn:aws:ec2:us-east-1:043509841279:elastic-ip/eipalloc-07972dac7471a4627",
            "association_id": "eipassoc-0b4105da1a0365cd5",
            "domain": "vpc",
            "id": "eipalloc-07972dac7471a4627",
            "instance": "i-00d9582bb2ebbac8b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-025b51433bf58c617",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-98-89-234-224.compute-1.amazonaws.com",
            "public_ip": "98.89.234.224",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stock_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c870feb7c37e4ff",
            "arn": "arn:aws:ec2:us-east-1:043509841279:instance/i-00d9582bb2ebbac8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d9582bb2ebbac8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "swen_514",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-025b51433bf58c617"
              }
            ],
            "primary_network_interface_id": "eni-025b51433bf58c617",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-98-89-234-224.compute-1.amazonaws.com",
            "public_ip": "98.89.234.224",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a134ba53d413f36",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b16931e18fdfcd98",
            "tags": {
              "Name": "WordPress EC2 Instance"
            },
            "tags_all": {
              "Name": "WordPress EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093e7e2b4ef465119"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "i-00d9582bb2ebbac8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_cloudfront_distribution.cdn",
            "aws_eip.ec2_eip",
            "module.cognito.aws_cognito_user_pool.pool",
            "module.cognito.aws_cognito_user_pool_client.client",
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.rds.aws_db_instance.stock_rds",
            "module.s3.aws_s3_bucket.frontend",
            "module.s3.aws_s3_bucket_website_configuration.frontend_website",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg",
            "module.subnet_group.aws_db_subnet_group.stock_db_subnet_group",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.stock_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:security-group/sg-093e7e2b4ef465119",
            "description": "Security group for Stock EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093e7e2b4ef465119",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "stock_ec2_sg",
            "name_prefix": "",
            "owner_id": "043509841279",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f04deb0c79d11604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "sg-093e7e2b4ef465119",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:security-group/sg-0184c0f76eae1132a",
            "description": "Security group for Stock RDS instance",
            "egress": [],
            "id": "sg-0184c0f76eae1132a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093e7e2b4ef465119"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "stock_rds_sg",
            "name_prefix": "",
            "owner_id": "043509841279",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f04deb0c79d11604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "sg-0184c0f76eae1132a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stock_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:internet-gateway/igw-031f00d729d6e7002",
            "id": "igw-031f00d729d6e7002",
            "owner_id": "043509841279",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Internet Gateway"
            },
            "tags_all": {
              "Name": "Stock Internet Gateway"
            },
            "vpc_id": "vpc-0f04deb0c79d11604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:route-table/rtb-0c8aa65420c779618",
            "id": "rtb-0c8aa65420c779618",
            "owner_id": "043509841279",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031f00d729d6e7002",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stock Public Route Table"
            },
            "tags_all": {
              "Name": "Stock Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f04deb0c79d11604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "rtb-0c8aa65420c779618",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stock_igw",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f9abd861db366a",
            "region": "us-east-1",
            "route_table_id": "rtb-0c8aa65420c779618",
            "subnet_id": "subnet-0b16931e18fdfcd98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.stock_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:subnet/subnet-0d1b35cdfddba9986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b35cdfddba9986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509841279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Private Subnet"
            },
            "tags_all": {
              "Name": "Stock Private Subnet"
            },
            "vpc_id": "vpc-0f04deb0c79d11604"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "subnet-0d1b35cdfddba9986",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:subnet/subnet-0b16931e18fdfcd98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b16931e18fdfcd98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043509841279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock Public Subnet"
            },
            "tags_all": {
              "Name": "Stock Public Subnet"
            },
            "vpc_id": "vpc-0f04deb0c79d11604"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "subnet-0b16931e18fdfcd98",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stock_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stock_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509841279:vpc/vpc-0f04deb0c79d11604",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0203a295c29e6fda6",
            "default_route_table_id": "rtb-01e982c14139ec607",
            "default_security_group_id": "sg-0df04436e156d9a97",
            "dhcp_options_id": "dopt-0323586177925f8ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f04deb0c79d11604",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e982c14139ec607",
            "owner_id": "043509841279",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock VPC"
            },
            "tags_all": {
              "Name": "Stock VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509841279",
            "id": "vpc-0f04deb0c79d11604",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}